@@ -113,8 +113,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.6.0-beta01
-@set doc-edition 4.6.0-beta01
+@set nco-edition 4.6.0-beta02
+@set doc-edition 4.6.0-beta02
 @set copyright-years 1995--2016
 @set update-year 2016
 @set update-date 17 April 2016
