@@ -1,5 +1,9 @@
 2016-04-17  Charlie Zender  <zender@uci.edu>
 
+	* NCO 4.6.0-beta02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.6.0-beta02 final changes';git push
+	git tag -a 4.6.0-beta02 -m 'Version 4.6.0-beta02 new features: ncclimo, climatology bounds';git push --tags
+
 	* Copy missing units to temporal bounds to aid debugging
 
 2016-04-16  Charlie Zender  <zender@uci.edu>
@@ -34,7 +38,7 @@
 
 2016-04-01  Charlie Zender  <zender@uci.edu>
 
-	* NCO 4.5.6-beta01 release procedure:
+	* NCO 4.6.0-beta01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.6.0-beta01 final changes';git push
 	git tag -a 4.6.0-beta01 -m 'Version 4.6.0-beta01 new features: Terraref works well';git push --tags
 
